--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-  font-family: 'Courier New', Courier, monospace;
+  font-family:Arial, Helvetica, sans-serif
   background-color: #EDF6F2;
   
   
@@ -8,14 +8,14 @@
   text-align: center;
 }
 .presentacion{
-  padding-left: 40%;
-  padding-right: 40%;
-  text-align: center;
-  font-size: 16px;
+  padding-left: 10%;
+  padding-right: 10%;
+  text-align: left;
+  font-size: 18px;
 }
 .presentacion p{
   color: #314652;
-  font-size: 16px;
+  font-size: 18px;
 }
 .presentacion a{
   text-decoration: none;
@@ -31,19 +31,17 @@ h2{
   padding-right: 10%;
 }
 
-@media (max-width: 1920px) {
-.presentacion {
-    text-align: left;
-}
-.presentacion {
-  padding-left: 10%;
-  padding-right: 10%; 
-}
-}
-
-
-
 @media (max-width: 640px) {
+
+.presentacion {
+  text-align: left;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+.presentacion p{
+  color: #314652;
+  font-size: 18px;
+}
 .pasos{
   text-align: left;
   padding-left: 10%;
@@ -52,7 +50,7 @@ h2{
 }
 .pasos p{
 color: #314652;
-font-size: 16px;
+font-size: 18px;
 }
 #busqueda {
   background-color: #f2f2f2; /* Cambia el color de fondo */
@@ -61,7 +59,7 @@ font-size: 16px;
   height: 35px;
   border-color: #314652;
   border-radius: 20px;
-  font-size: 16px;
+  font-size: 18px;
   text-align: center;
 }
 #btnbuscar{
@@ -69,7 +67,7 @@ font-size: 16px;
   height: 35px;
   border: none;
   border-radius: 20px;
-  font-size: 16px;
+  font-size: 18px;
   color: white;
   background-color: #314652;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
